<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/homefeed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/adtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rectangle"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="Advertisement"
            android:textColor="#000000"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintVertical_bias="0.030"
            app:layout_constraintHorizontal_bias="0.500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"></TextView>

        <LinearLayout
            android:id="@+id/homefeed_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.126">

            <Button
                android:id="@+id/recipe_btn"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#f5ee9e"
                android:fontFamily="serif-monospace"
                android:text="Recipe"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/recipe_image"
                    android:layout_width="333dp"
                    android:layout_height="258dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:src="@drawable/blankprofilepicture" />

                <Button
                    android:id="@+id/homefeed_nextBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/arrow"
                    android:rotation="90"
                    app:backgroundTint="@null" />

            </LinearLayout>

            <Button
                android:id="@+id/creator_btn"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="#f5ee9e"
                android:fontFamily="serif-monospace"
                android:text="Created By:\n"
                android:textColor="#000000"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recipe_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="serif-monospace"
                android:text="description"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/inventory_btn"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#f5ee9e"
                android:fontFamily="serif-monospace"
                android:text="Inv"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/view_my_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:backgroundTint="#f5ee9e"
                android:fontFamily="serif-monospace"
                android:text="Profile"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/homefeed_postBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:backgroundTint="#f5ee9e"
                android:fontFamily="serif-monospace"
                android:text="Post"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/search_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:backgroundTint="#f5ee9e"
                android:fontFamily="serif-monospace"
                android:text="Search"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>