...
            app:layout_constraintHorizontal_bias="0.490"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.100">

            <TextView
                android:id="@+id/welcomeMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rectangle"
                android:fontFamily="serif-monospace"
                android:gravity="center"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.951">

            <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:backgroundTint="#f5ee9e"
                android:fontFamily="serif-monospace"
                android:text="Home"
...
                android:text="Logout"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"></Button>

            <Button
                android:id="@+id/editProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#f5ee9e"
                android:fontFamily="serif-monospace"
                android:text="Edit"
                android:textColor="#000000"
...
